--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_application_1
 description: CatMe - Aplikasi Adopsi Kucing
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,10 +17,10 @@ dependencies:
   flutter_map: ^6.0.0
   latlong2: ^0.9.0
   intl: ^0.19.0
-  crypto: ^3.0.3  
-  sqflite: ^2.3.0 
-  path: ^1.8.3 
-  
+  crypto: ^3.0.3
+  sqflite: ^2.3.0
+  path: ^1.8.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -30,4 +30,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/profile.jpg
+    - assets/profile2.jpg
     - assets/cat_icon.png
